# rplidar_extras

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
include/rplidar_extras/: rplidar_nodelet.hpp
launch/: rplidar.launch  rplidar_nodelet.launch  view_rplidar.launch
plugins/: nodelet_plugins.xml
src/: rplidar_node.cpp  rplidar_nodelet.cpp
